Version 3.4.3.x (2011-xx-xx)
	Added new html5 audio support. Patch contributed by Ronald M. Clifford.
	Fixed bug where formatting change would be lost after pressing enter.
	Fixed bug in WebKit where deleting across blocks would add extra styles.
	Fixed bug where moving cursor vertically in tables in WebKit wasn't working.
	Fixed bug in IE where deleting would cause error in console.
	Fixed tests in IE.
	Fixed bug where the formatter was not applying formats across list elements.
	Fixed bug where the wordcount plugin would try and update the wordcount if tinymce had been destroyed.
	Fixed bug where tabfocus plugin would attempt to focus elements not displayed when their parent element was hidden.
	Fixed bug where the contentEditable state would sometimes be removed if you deleted contents in Gecko.
	Fixed bug where inserting contents using mceInsertContent would fail if "span" was disabled in valid_elements.
	Fixed bug where initialization might fail if some resource on gecko wouldn't load properly and fire the onload event.
	Fixed bug where ctrl+7/8/9 keys wouldn't properly add the specific formats associated with them.
	Fixed bug where the HTML tags wasn't properly closed in the style plugins properties dialog.
Version 3.4.3.2 (2011-06-30)
	Fixed bug where deleting all of a paragraph inside a table cell would behave badly in webkit.
	Fixed bugs in tests in firefox5 and WebKit.
	Fixed bug where selection of table cells would produce an exception on Gecko.
	Fixed bug where the caret wasn't properly rendered on Gecko when the editor was hidden.
	Fixed bug where pasting plain text into WebKit would produce a pre element it will now produce more semantic markup.
	Fixed bug where selecting list type formats using the advlist plugin on IE8 would loose editor selection.
	Fixed bug where forced root blocks logic wouldn't properly pad elements created if they contained data attributes.