@@ -105,6 +105,8 @@ altsource1:"Alternative source 1",
 altsource2:"Alternative source 2",
 preload:"Preload",
 poster:"Poster",
-
+preload_none:"Don't preload",
+preload_metadata:"Preload videos metadata",
+preload_auto:"Let user's browser decide",
 source:"Source"
 });
