@@ -160,6 +160,17 @@
 								</table>
 							</td>
 						</tr>
+
+						<tr>
+							<td><label for="video_preload">{#media_dlg.preload}</label></td>
+							<td>
+								<select id="video_preload" name="video_preload" onchange="Media.formToData();">
+									<option value="none">{#media_dlg.preload_none}</option> 
+									<option value="metadata">{#media_dlg.preload_metadata}</option>
+									<option value="auto">{#media_dlg.preload_auto}</option>
+								</select>
+							</td>
+						</tr>
 					</table>
 
 					<table role="presentation" border="0" cellpadding="4" cellspacing="0">
@@ -176,19 +187,19 @@
 							<td>
 								<table role="presentation" border="0" cellpadding="0" cellspacing="0">
 									<tr>
-										<td><input type="checkbox" class="checkbox" id="video_loop" name="video_loop" onchange="Media.formToData();" /></td>
-										<td><label for="video_loop">{#media_dlg.loop}</label></td>
+										<td><input type="checkbox" class="checkbox" id="video_muted" name="video_muted" onchange="Media.formToData();" /></td>
+										<td><label for="video_muted">{#media_dlg.mute}</label></td>
 									</tr>
 								</table>
 							</td>
 
 							<td>
-								<table role="presentation" border="0" cellpadding="0" cellspacing="0">
-									<tr>
-										<td><input type="checkbox" class="checkbox" id="video_preload" name="video_preload" onchange="Media.formToData();" /></td>
-										<td><label for="video_preload">{#media_dlg.preload}</label></td>
-									</tr>
-								</table>
+									<table role="presentation" border="0" cellpadding="0" cellspacing="0">
+											<tr>
+													<td><input type="checkbox" class="checkbox" id="video_loop" name="video_loop" onchange="Media.formToData();" /></td>
+													<td><label for="video_loop">{#media_dlg.loop}</label></td>
+											</tr>
+									</table>
 							</td>
 
 							<td>
@@ -230,6 +241,17 @@
 								</table>
 							</td>
 						</tr>
+
+						<tr>
+							<td><label for="audio_preload">{#media_dlg.preload}</label></td>
+							<td>
+								<select id="audio_preload" name="audio_preload" onchange="Media.formToData();">
+									<option value="none">{#media_dlg.preload_none}</option> 
+									<option value="metadata">{#media_dlg.preload_metadata}</option>
+									<option value="auto">{#media_dlg.preload_auto}</option>
+								</select>
+							</td>
+						</tr>
 					</table>
 
 					<table role="presentation" border="0" cellpadding="4" cellspacing="0">
@@ -248,15 +270,6 @@
 									<tr>
 										<td><input type="checkbox" class="checkbox" id="audio_loop" name="audio_loop" onchange="Media.formToData();" /></td>
 										<td><label for="audio_loop">{#media_dlg.loop}</label></td>
-									</tr>
-								</table>
-							</td>
-
-							<td>
-								<table role="presentation" border="0" cellpadding="0" cellspacing="0">
-									<tr>
-										<td><input type="checkbox" class="checkbox" id="audio_preload" name="audio_preload" onchange="Media.formToData();" /></td>
-										<td><label for="audio_preload">{#media_dlg.preload}</label></td>
 									</tr>
 								</table>
 							</td>
