@@ -143,7 +143,7 @@ test('getBoolAttrs', function() {
 
 	var schema = new tinymce.html.Schema();
 	deepEqual(schema.getBoolAttrs(), {
-		"controls": {}, "loop": {}, "autoplay": {}, "preload": {}, "selected": {}, "readonly": {}, "nowrap": {},
+		"controls": {}, "loop": {}, "autoplay": {}, "selected": {}, "readonly": {}, "nowrap": {},
 		"noshade": {}, "noresize": {}, "nohref": {}, "multiple": {}, "ismap": {}, "disabled": {}, "defer": {},
 		"declare": {}, "compact": {}, "checked": {}
 	});
