@@ -1,5 +1,6 @@
 Version 3.4.3.x (2011-xx-xx)
 	Added new html5 audio support. Patch contributed by Ronald M. Clifford.
+	Added mute option for video elements and preload options for video/audio patch contributed by Dmitry Kalinkin.
 	Fixed bug where formatting change would be lost after pressing enter.
 	Fixed bug in WebKit where deleting across blocks would add extra styles.
 	Fixed bug where moving cursor vertically in tables in WebKit wasn't working.
